[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/gameOver.gd" type="Script" id=1]
[ext_resource path="res://imagens/cidade.png" type="Texture" id=2]
[ext_resource path="res://imagens/GameOver.png" type="Texture" id=3]
[ext_resource path="res://imagens/restart.png" type="Texture" id=4]
[ext_resource path="res://imagens/menu.png" type="Texture" id=5]
[ext_resource path="res://fonts/nokian.ttf" type="DynamicFontData" id=6]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 0
light_mode = 0

[sub_resource type="ImageTexture" id=2]

flags = 7
storage = 0
lossy_quality = 0.7
flags = 7
size = Vector2( 0, 0 )

[sub_resource type="DynamicFont" id=3]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font/fallback", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="gameOver" type="Node2D" index="0"]

position = Vector2( 209.031, 84.0667 )
script = ExtResource( 1 )

[node name="canvas" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Back Ground" type="Sprite" parent="canvas" index="0"]

material = SubResource( 1 )
position = Vector2( -9.08844, -24.9929 )
scale = Vector2( 0.45, 0.35 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform" ]

[node name="title" type="Sprite" parent="canvas" index="1"]

position = Vector2( 200.897, 36.353 )
texture = ExtResource( 3 )
normal_map = SubResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Region", "Transform", "Visibility" ]

[node name="restart" type="TouchScreenButton" parent="canvas" index="2"]

position = Vector2( 338.539, 252.2 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Material", "Offset", "Transform", "Visibility", "Z Index" ]

[node name="menu" type="TouchScreenButton" parent="canvas" index="3"]

position = Vector2( 234.023, 243.112 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Material", "Offset", "Transform", "Visibility", "Z Index" ]

[node name="Last_Score" type="Label" parent="canvas" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 458.0
margin_top = 33.0
margin_right = 595.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Best_Score" type="Label" parent="canvas" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 448.0
margin_top = 103.0
margin_right = 562.0
margin_bottom = 149.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="canvas/restart" to="." method="_on_restart_pressed"]

[connection signal="pressed" from="canvas/menu" to="." method="_on_menu_pressed"]


